--- a/02. FuncionesHelp.ipynb
+++ b/02. FuncionesHelp.ipynb
@@ -29,6 +29,103 @@
       "source": [
         "print(\"Hello World!\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Funciones"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 2 3\n",
+            "1 < 2 < 3\n"
+          ]
+        }
+      ],
+      "source": [
+        "print (1,2,3)\n",
+        "print(1,2,3, sep = ' < ')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Los parametros opcionales siempren deben de ir al final"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello,  Colin\n",
+            "Hello,  Kaggle\n",
+            "Hello,  World\n"
+          ]
+        }
+      ],
+      "source": [
+        "def greet(who=\"Colin\"):\n",
+        "    print (\"Hello, \" , who)\n",
+        "\n",
+        "greet()\n",
+        "greet(who=\"Kaggle\")\n",
+        "greet(who = \"World\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "25\n"
+          ]
+        }
+      ],
+      "source": [
+        "def multiplicar_por_cinco(x):\n",
+        "    return 5 * x\n",
+        "\n",
+        "def call (fn, arg):\n",
+        "    \"'llama a la funcion con argumento'\"\n",
+        "    return fn(arg)\n",
+        "\n",
+        "def cuadrado(fn, arg):\n",
+        "    \"'Call fn on the result of calling fn on arg'\"\n",
+        "    return fn(fn(arg))\n",
+        "\n",
+        "print(\n",
+        "    call(multiplicar_por_cinco, 1),\n",
+        "    cuadrado(multiplicar_por_cinco, 1),\n",
+        "    sep = '\\n',\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Estas funcionnes que toman como parametros otras funciones se les denomia funciones de orden superior"
+      ]
     }
   ],
   "metadata": {
@@ -51,7 +148,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.4"
+      "version": "3.12.1"
     },
     "orig_nbformat": 4,
     "vscode": {
