--- a/04. Listas.ipynb
+++ b/04. Listas.ipynb
@@ -13,21 +13,48 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "O8NoTzxjs2wK",
-        "outputId": "fa4bc249-a4fa-48a6-9dc6-7733646ed223"
-      },
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Hello World!\n"
+            "[2, 3, 5, 7]\n"
           ]
         }
       ],
       "source": [
-        "print(\"Hello World!\")"
+        "numeros_primos = [2,3,5,7]\n",
+        "planets = ['Mercury', 'Venus', 'Earth']"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Representar juegos de cartas\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "manos = [\n",
+        "    ['J', 'Q', 'K'],\n",
+        "    ['2', '2', '2'],\n",
+        "    ['6', 'K', 'Q']\n",
+        "]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "mis_cosas_favoritas = [5, \"nose\", help]"
       ]
     }
   ],
@@ -37,7 +64,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.10.7 64-bit",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -51,14 +78,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.7"
+      "version": "3.12.1"
     },
-    "orig_nbformat": 4,
-    "vscode": {
-      "interpreter": {
-        "hash": "eb4a0ac80907d7f44e1a5e88d3d3381b33e3dbedd3a24d113e876f30a0c46bee"
-      }
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
