--- a/05. Loops.ipynb
+++ b/05. Loops.ipynb
@@ -29,6 +29,181 @@
       "source": [
         "print(\"Hello World!\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mercury Venus Earth Mars Jupiter Saturn Uranus Neptune "
+          ]
+        }
+      ],
+      "source": [
+        "planets = ['Mercury', 'Venus', 'Earth', 'Mars', 'Jupiter', 'Saturn', 'Uranus', 'Neptune']\n",
+        "for planet in planets:\n",
+        "    print(planet, end = ' ') #print all on same line"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "multiplicands = (2, 2, 2, 3, 3, 5)\n",
+        "product = 1\n",
+        "for mult in multiplicands:\n",
+        "    product = product * mult\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 3 5 7 9 "
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(1, 11,2):\n",
+        "    print(i, end = ' ')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "list(range(10))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "D A N I E L E S U N P A R D I L L O T E E E E "
+          ]
+        }
+      ],
+      "source": [
+        "# print all the uppercase letters in s, one at a time\n",
+        "s = ' DANIEL ES UN PARDILLOTEEEE'\n",
+        "for char in s:\n",
+        "    if char.isupper():\n",
+        "        print(char, end = ' ')\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0  1  2  3  4  5  6  7  8  9  "
+          ]
+        }
+      ],
+      "source": [
+        "i = 0\n",
+        "while i < 10:\n",
+        "    print(i, end= '  ')\n",
+        "    i += 1 # increase the value of i by 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "squares = [n**2 for n in range(10)]\n",
+        "squares"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'planets' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m short_planets = [planet \u001b[38;5;28;01mfor\u001b[39;00m planet \u001b[38;5;129;01min\u001b[39;00m \u001b[43mplanets\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(planet) < \u001b[32m6\u001b[39m]\n\u001b[32m      2\u001b[39m short_planets\n",
+            "\u001b[31mNameError\u001b[39m: name 'planets' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "short_planets = [planet for planet in planets if len(planet) < 6]\n",
+        "short_planets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[32, 32, 32, 32, 32, 32, 32, 32]"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "[32 for planet in planets]"
+      ]
     }
   ],
   "metadata": {
@@ -37,7 +212,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.10.7 64-bit",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -51,14 +226,9 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.7"
+      "version": "3.12.1"
     },
-    "orig_nbformat": 4,
-    "vscode": {
-      "interpreter": {
-        "hash": "eb4a0ac80907d7f44e1a5e88d3d3381b33e3dbedd3a24d113e876f30a0c46bee"
-      }
-    }
+    "orig_nbformat": 4
   },
   "nbformat": 4,
   "nbformat_minor": 0
