--- a/05. Loops.ipynb
+++ b/05. Loops.ipynb
@@ -27,7 +27,7 @@
         }
       ],
       "source": [
-        "print(\"Hello World!\")"
+        "print(\"Hola mundo\")"
       ]
     },
     {
